[package]
name = "ruweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
derive_more = "0.99.14"
clap = { version = "4.0.19", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json", "multipart", "blocking"] }
rand = "0.8.5"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
log = "0.4.17"
env_logger = "0.9.1"
uuid = { version = "1.2.1", features = ["serde", "v4"] }